--- a/auctions/templates/about.html
+++ b/auctions/templates/about.html
@@ -1,40 +1,17 @@
-{% extends "base.html" %}
-{% block title %} About us {% endblock %}
+{% extends "base.html" %} {% block title %} About us {% endblock %}
 {% block content %}
-
- <h1> About us </h1>
-
+<h1> About us </h1>
     <div id="about">
-
-	<p align="justify">AuctionZ Corporation is an easy way of selling and purchasing products online. We offer a variety of auction types, such as British, Sealed, and Vickrey auctions. This website was developed to help people all over the world to buy and sell products in a fast and efficient way, furthermore, different auctions can be chosen to fit the custumer's needs.</p>
-
-	<p align="justify">Since its foundation in 2013, AuctionZ has done many investments in the website security and reliability of its auctions and many more improvements are coming. Last but not least, we always aim for the users's needs and satisfaction. Join us, create your account free and make part of our network of sellers and buyers.<br><br></p>
-
-	<h1>Team</h1>
-
-    <table width="600">
-        <tr>
-            <td><b><p><a href="mailto:rgp1g13@soton.ac.uk">Renan Gomes</a></p></b>
-                <p>Designer Director<br><br></p></td>
-            <td><b><p><a href="mailto:vdat1g13@soton.ac.uk">Vitor Torreao</a></p></b>
-                <p>Programmer Leader<br><br></p></td>
-        </tr>
-        <tr>
-            <td><b><p><a href="mailto:vadm1g13@soton.ac.uk">Vitor Antero</a></p></b>
-                <p>CEO<br><br></p></td>
-            <td><b><p><a href="mailto:mgdc1g13@soton.ac.uk">Mauricio Carvalho</a></p></b>
-                <p>Web-designer<br><br></p></td>
-        </tr>
-        <tr>
-            <td><b><p><a href="mailto:mgsb1g13@soton.ac.uk">Matheus Beleboni</a></p></b>
-                <p>Web-designer<br><br></p></td>
-            <td><b><p><a href="mailto:mgt1g13@asoton.ac.uk">Matheus Garay</a></p></b>
-                <p>Web-designer<br><br></p>
-        </td>
-        </tr>
-        
-    </table>
+        <p align="justify">AuctionZ Corporation is an easy way of selling and purchasing products online. We offer a variety of auction types, such as British, Sealed, and Vickrey auctions. This website was developed to help people all over the world to buy and sell products in a fast and efficient way, furthermore, different auctions can be chosen to fit the custumer's needs.</p>
+        <p align="justify">Since its foundation in 2013, AuctionZ has done many investments in the website security and reliability of its auctions and many more improvements are coming. Last but not least, we always aim for the users's needs and satisfaction. Join us, create your account free and make part of our network of sellers and buyers.<br><br></p>
+        <h1>Team</h1>
+        <table width="600">
+            <tr> <td><b><p><a href="mailto:rgp1g13@soton.ac.uk">Renan Gomes</a></p></b> <p>Designer Director<br><br></p></td>
+                <td><b><p><a href="mailto:vdat1g13@soton.ac.uk">Vitor Torreao</a></p></b> <p>Programmer Leader<br><br></p></td> </tr>
+            <tr> <td><b><p><a href="mailto:vadm1g13@soton.ac.uk">Vitor Antero</a></p></b> <p>CEO<br><br></p></td>
+                <td><b><p><a href="mailto:mgdc1g13@soton.ac.uk">Mauricio Carvalho</a></p></b> <p>Web-designer<br><br></p></td> </tr>
+            <tr> <td><b><p><a href="mailto:mgsb1g13@soton.ac.uk">Matheus Beleboni</a></p></b> <p>Web-designer<br><br></p></td>
+                <td><b><p><a href="mailto:mgt1g13@asoton.ac.uk">Matheus Garay</a></p></b> <p>Web-designer<br><br></p> </td> </tr>
+        </table>
     </div>
-
-    
 {% endblock %}  
