--- a/auctions/templates/category.html
+++ b/auctions/templates/category.html
@@ -1,60 +1,31 @@
-{% extends "base.html" %}
-{% block title %} Category - {% if invalid_cat %} Invalid {% else %} {{cat_name}} {% endif %} {% endblock %}
-{% block head %}
-{% load staticfiles %}
-    <script src="{% static "js/show-details.js" %}"> </script>
-{% endblock %}
+{% extends "base.html" %} {% block title %} Category - {% if invalid_cat %} Invalid {% else %} {{cat_name}} {% endif %} {% endblock %}
+{% block head %} {% load staticfiles %} <script src="{% static "js/show-details.js" %}"> </script> {% endblock %}
 {% block content %}
-
-  <!-- FRONT-END people, apply styles and beauty to this page!-->
-
-  <h1> Category - {% if invalid_cat %} Invalid {% else %} {{cat_name}} {% endif %} </h1>
-
-  {% if invalid_cat %} <p>You have requested an invalid category! Try clicking on the links in the menu</p>
-  {% else %}
-
-    {% if num_auctions == 0 %} <p>No results found. Try another category.</p>
-    {% else %}
+    <h1> Category - {% if invalid_cat %} Invalid {% else %} {{cat_name}} {% endif %} </h1>
+    {% if invalid_cat %} <p>You have requested an invalid category! Try clicking on the links in the menu</p>
+    {% else %} {% if num_auctions == 0 %} <p>No results found. Try another category.</p>
+        {% else %}
           {% for auction in auctions %}
             <div class="out enterleave">
                 <div style="height: 250px;">
-                    <a href="/auction/{{auction.id}}"><img src="{% static "css/no_image.png" %}" width="150" height="150" border="1"/></a>
-                    <p> <a href="/auction/{{auction.id}}"> {{ auction.product.title }} </a> </p> </div>
+                    <a href="/auction/{{auction.id}}"><img src="{% static "css/no_image.png" %}" width="150" height="150" border="1"/></a> <p> <a href="/auction/{{auction.id}}"> {{ auction.product.title }} </a> </p> </div>
                 <div class="hidden">
-                    <table>
-                        <tr><td>
-                            {% if auction.auction_type == "SEAL" or auction.auction_type == "VICK" %}
-                            Start Price: &pound;{{auction.start_price}}
-                            {% else %}
-                            {% if auction.winning_bid %}
-                            Last Bid: &pound;{{auction.winning_value}}
-                            {% else %}
-                            Start Price: &pound;{{auction.start_price}}
-                            {% endif %}
-                            
+                    <table> <tr><td>
+                            {% if auction.auction_type == "SEAL" or auction.auction_type == "VICK" %} Start Price: &pound;{{auction.start_price}}
+                            {% else %} {% if auction.winning_bid %} Last Bid: &pound;{{auction.winning_value}}
+                                {% else %} Start Price: &pound;{{auction.start_price}} {% endif %}
                             {% endif%}
                         </td></tr>
-                        <tr><td>Auction Type:
-                            {% if auction.auction_type == "SEAL" %}
-                            Sealed Bid
-                            {% else %}
-                            {% if auction.auction_type == "BRIT" %}
-                            British
-                            {% else %}
-                            Vickrey
-                            {% endif %}
-                            {% endif%}
+                        <tr><td>Auction Type: {% if auction.auction_type == "SEAL" %} Sealed Bid
+                                                    {% else %} {% if auction.auction_type == "BRIT" %} British
+                                                        {% else %} Vickrey {% endif %}
+                                                    {% endif%}
                         </td></tr>
-                        <tr><td>
-                            End: {{auction.date_end|date:"d/m/y H:i"}}
-                        </td></tr>
+                        <tr><td> End: {{auction.date_end|date:"d/m/y H:i"}} </td></tr>
                     </table>
-                    
                 </div>
             </div>
-
-          {% endfor %}
-        {% endif %}
+        {% endfor %}
+    {% endif %}
   {% endif %}
-
 {% endblock %}
