--- a/auctions/templates/auction.html
+++ b/auctions/templates/auction.html
@@ -9,7 +9,20 @@
 		<script>
 			$(document).ready(function()
 			{
-				var date = new Date($("#date_end").html());
+				var day, time;
+				var timestamp = $("#date_end").html();
+				timestamp = timestamp.split(" ");
+				day = timestamp[0].split("/");
+				time = timestamp[1].split(":");
+				console.log(parseInt(time[0]), parseInt(time[1]),parseInt(time[2]));
+				day = day.map(function(item){
+					return parseInt(item);
+				});
+				time = time.map(function(item){
+					return parseInt(item);
+				});
+				var date = new Date(2000 + day[2], day[1], day[0],
+							 time[0], time[1], time[2], 0);
 				$('#countdown').countdown({until: date}); 
 				$("#bid").click(function(e)
 				{
