Validacoes js no create auction

--- a/auctions/templates/create_auction.html
+++ b/auctions/templates/create_auction.html
@@ -4,6 +4,8 @@
 
 {% load staticfiles %}
 		<link rel="stylesheet" type="text/css" href="{% static "css/create_auction.css" %}" media="screen" />
+		<script src="{% static "js/jquery.maskedinput.min.js" %}">
+		</script>
 		<script src="{% static "js/create_auction.js" %}">
 		</script>
 {% endblock %}
