--- a/auctions/templates/contact.html
+++ b/auctions/templates/contact.html
@@ -10,18 +10,7 @@
     <h1> Contact Us </h1>
     <form role="form" action="" method="post">
       {% csrf_token %}
-      {% for field in form %}
-      	
-      	{% if field.name == "message" %}
-      	 <textarea class="input-text" type="text" rows="8" cols="100" name="{{ field.name }}" id="id_{{ field.name }}" placeholder="{% if not form.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}"></textarea><br>
-      	
-      	{% else %}		
-        
-        <input class="input-text" type="text" name="{{ field.name }}" id="id_{{ field.name }}" placeholder="{% if not form.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}"><br>
-
-        {% endif %}
-      
-      {% endfor %}
+      {{ form.as_p }}
       <input type="submit" id="register" value="Send"/>
     </form>
   {% endblock %}  
