--- a/auctions/templates/category.html
+++ b/auctions/templates/category.html
@@ -8,7 +8,7 @@
           {% for auction in auctions %}
             <div class="out enterleave">
                 <div style="height: 250px;">
-                    <a href="/auction/{{auction.id}}"><img src="{% static "css/no_image.png" %}" width="150" height="150" border="1"/></a> <p> <a href="/auction/{{auction.id}}"> {{ auction.product.title }} </a> </p> </div>
+                    <a href="/auction/{{auction.id}}"><img src="{{ auction.product.image.url }}" width="150" height="150" border="1"/></a> <p> <a href="/auction/{{auction.id}}"> {{ auction.product.title }} </a> </p> </div>
                 <div class="hidden">
                     <table> <tr><td>
                             {% if auction.auction_type == "SEAL" or auction.auction_type == "VICK" %} Start Price: &pound;{{auction.start_price}}
