--- a/auctions/static/css/style.css
+++ b/auctions/static/css/style.css
@@ -4,8 +4,7 @@ body { margin: 0px 0px; word-wrap: break-word; font: 14px Helvetica,Arial,Tahoma
 #logo {	width: 300px; }
 #search, #search text { min-width: 400px; color: #fff; font-size: 14px; }
 #user { width: 400px; }
-#user a, #user a:active, #user a:visited { color: #fff; text-decoration: none; }
-#user a:hover { text-decoration: underline; }
+#user a, #user a:active, #user a:visited { color: #fff; text-decoration: underline; }
 #container { width: 100%; min-width: 900px; min-height: 500px; margin-top: 20px; margin-bottom: 20px; }
 #navbar { height: 40px; background-image: linear-gradient(rgb(255, 255, 255), rgb(238, 238, 238) 50%, rgb(228, 228, 228));background-repeat: no-repeat; border-top: 1px solid rgb(213, 213, 213); border-bottom: 1px solid rgb(150, 150, 150); filter: none; text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.3); }
 #navbar a, #navbar a:visited, #navbar a:active, #side-bar a, #side-bar a:visited, #side-bar a:active  { text-decoration: none; color:#575757; }
