--- a/auctions/templates/register.html
+++ b/auctions/templates/register.html
@@ -24,4 +24,5 @@
       {% endfor %}
       <input type="submit" id="register" value="Register"/>
     </form>
+    <div id="error" style="color: red !important; margin-top: 10px;"> </div>
   {% endblock %}  
