--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -5,7 +5,9 @@
 		<meta charset="utf-8">
         <title>{% block title %} Template {% endblock %}</title>
         {% load staticfiles %} <script src="{% static "js/jquery-1.10.2.min.js" %}"> </script>
+        
         <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}" media="screen" />
+        <script src="{% static "js/login.js" %}"> </script>
         {% block head %}{% endblock %}
     </head>
 	<body>
@@ -18,7 +20,7 @@
 						{% if user.is_authenticated %} <p style="font-size: 12px;">You're logged in as <a href="/profile/" style="color:#ffffff">{{user.username}}</a> &nbsp;&nbsp;&nbsp; <a href="/logout/" alt="Log out"><button id="logout_button" style="font-size: 12px">Log Out</button></a></p>
 						{% else %}
                             <form id="login_form" method="post" action="/login/"> {% csrf_token %}
-                                <table> <tr> <td><input class="input-text" type="text" name="username" value="" placeholder="Username" style="font-size: 10px"></td> <td><input class="input-text" type="password" name="password" value="" placeholder="Password" style="font-size: 10px"></td> </tr> <tr> <td>&nbsp;</td> <td align="right"><input type="submit" name="submit" value="Log in" style="font-size: 12px"> <a href="/register/" style="color:#ffffff">Register</a><br /></td> </tr>
+                                <table> <tr> <td><input class="input-text" type="text" id="username_login" name="username" value="" placeholder="Username" style="font-size: 10px"></td> <td><input class="input-text" id="password_login" type="password" name="password" value="" placeholder="Password" style="font-size: 10px"></td> </tr> <tr> <td id="error_login" style="font-size: 10px"></td> <td align="right"><input type="submit" id="submit_login" name="submit" value="Log in" style="font-size: 12px"> <a href="/register/" style="color:#ffffff">Register</a><br /></td> </tr>
                                 </table>
                             </form>
   						{% endif %} </center></td>
