--- a/auctions/templates/create_auction.html
+++ b/auctions/templates/create_auction.html
@@ -63,7 +63,7 @@
 	         <td>End Date:
 	         </td>
 	         <td>
-	           <input class="editable" id="id_date_end" name="date_end" type="text" placeholder="End Date"/> DD/MM/YYYY HH:MM:SS
+	           <input class="editable" id="id_date_end" name="date_end" type="text" placeholder="End Date"/> DD/MM/YYYY HH:MM
 	         </td>
 	       </tr>
 	       <tr>
