--- a/auctions/templates/edit_profile.html
+++ b/auctions/templates/edit_profile.html
@@ -1,32 +1,26 @@
 {% extends "base.html" %}
 {% block title %} Edit Profile {% endblock %}
-
-  {% if register_problem %}
-  <p>There was a problem with your registration. Please, try again</p>
-  {% if username_in_use %}<p style="color:#ff0000">The username provided is already in use</p>{% endif %}
-  {% if email_in_use %}<p style="color:#ff0000">The email provided is already in use</p>{% endif %}
-  {% endif %}
-  {% block content %}
+{% block content %}
     <h1> Edit Profile </h1>
     <form role="form" action="" method="post">
       {% csrf_token %}
       {% for field in form %}
-
       <div class="form-group contract_form {% if field.errors %}has-error{% endif %}">
-        
         {% if field.name == "password1" or field.name == "password2" or field.name == "old_pass" %}
-
-          <input type="password" id="id_{{ field.name }}" name="{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
-
+            <input type="password" id="id_{{ field.name }}" name="{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
         {% else %}
-
-          <input type="text" id="{{ field.name }}" name="{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
-
+            <input type="text" id="{{ field.name }}" name="{{ field.name }}" placeholder="{% if not field.value %}{{ field.label|capfirst }}{% endif %}" value="{% if field.value %}{{ field.value }}{% endif %}" class="form-control font_source_semibold contract_field_width">
         {% endif %}
-
-
       </div>
       {% endfor %}
       <input type="submit" value="Change">
+          <div id="error" style="color: red !important;">
+              {% if register_problem %}
+                <b>Erro(s):</b>
+                {% if email_in_use %}<br> *The email provided is already in use{% endif %}
+                {% if auth_error %}<br> *The current password provided is wrong{% endif %}
+                {% if confirm_error %} <br> *The two passwords are different {% endif %}
+            {% endif %}
+          </div>
     </form>
   {% endblock %}  
