--- a/auctions/templates/auction.html
+++ b/auctions/templates/auction.html
@@ -50,5 +50,6 @@
                 <td valign="bottom" style="padding-left: 10px" ><p><b>Time remaining:</b></p><div id="countdown" style="height:45px;width:200px"></div></td>
             </tr>
         </table>
+        {% if bid_success %}<div id="success">Your bid was placed successfully</div>{% endif %}
             {% endif %}
 {% endblock %}
