--- a/auctions/static/css/create_auction.css
+++ b/auctions/static/css/create_auction.css
@@ -20,5 +20,5 @@
 /* The number of the step and the connector before it = green */
 #progressbar li.active:before,  #progressbar li.active:after{ background: #022D71; color: white; }
 #product_info, #auction_info, #confirmation { padding-bottom: 20px; border: 2px dotted #CDCDCD; }
-#auction_form a, #auction_form a:visited, #auction_form a:active { text-decoration: none; color: #575757; padding-left: 30px; }
-#auction_form a:hover { color: #022D71; }
+#auction_form a, #auction_form a:visited, #auction_form a:active { text-decoration: underline; color: #575757; padding-left: 30px; }
+#auction_form a:hover { color: #022D71; text-decoration:underline; }
