--- a/auctions/templates/profile.html
+++ b/auctions/templates/profile.html
@@ -4,7 +4,7 @@
 
 <h1>{{user.username}}'s Profile</h1>
 
-<p><a href="/edit_profile/">Edit profile</a></p>
+<p><a href="/edit_profile/" style="color: #575757; text-decoration:underline;">Edit profile</a></p>
 
 <p><b>E-mail: </b>{{user.email}}</p>
 
