Fixes bid on auction

--- a/auctions/templates/auction.html
+++ b/auctions/templates/auction.html
@@ -42,7 +42,7 @@
                             {% endif %}
                         {% endif %}
                         <form method="POST" action="/auction/{{ auction.id }}/"> {% csrf_token %}
-                            Bid amount: {{ form.value }}
+                            Bid amount: {% if form %} {{ form.value }} {% else %} <input id="id_value" type="text" name="value"/>{% endif %}
                             <input id="bid" type="submit" name="submit" value="Bid">
                         </form>
                     {% endif %}
