Fixes Vickrey and Contact

--- a/auctions/templates/auction.html
+++ b/auctions/templates/auction.html
@@ -36,7 +36,7 @@
                         {% endif %}
                     {% else %}
                         <h2>Bid now!</h2>
-                        {% if auction.auction_type != "SEAL" %}
+                        {% if auction.auction_type != "SEAL" and auction.auction_type != "VICK" %}
                             {% if auction.winning_bid %}<p><b>Current bid: </b>&pound;{{auction.winning_value}}</p>
                             {% else %}<p><b>No bid so far</b></p>
                             {% endif %}
