Sends email to winner and auctioneer

--- a/auctions/templates/mail_sold.html
+++ b/auctions/templates/mail_sold.html
@@ -1,7 +1,7 @@
 <h3>Congratulations - AuctionZ</h3>
 <p>Hello {{ auction.auctioneer }},</p>
 <p>We are glad to say that your auction for {{auction.product.title}} finished with a winning bid from {{auction.winner}}.</p>
-<p>The final price for the product is {{auction.winning_value}}.</p>
+<p>The final price for the product is £{{auction.winning_value}}.</p>
 <p>Please contact the buyer at {{auction.winner.email}}.</p>
 <p>In case of any doubt or if you need any further help, don't hesitate to contact us by replying to this email.</p>
 </br>
