--- a/auctions/templates/mail_won.html
+++ b/auctions/templates/mail_won.html
@@ -1,7 +1,7 @@
 <h3>Congratulations - AuctionZ</h3>
 <p>Hello {{ auction.winner }},</p>
 <p>We are glad to say that you have won the auction for {{auction.product.title}} from {{auction.auctioneer.username}}.</p>
-<p>The final price for the product is {{auction.winning_value}} and you should pay this amount as soon as possible to the aucioneer.</p>
+<p>The final price for the product is £{{auction.winning_value}} and you should pay this amount as soon as possible to the aucioneer.</p>
 <p>Please contact him/her at {{auction.auctioneer.email}}.</p>
 <p>In case of any doubt or if you need any further help, don't hesitate to contact us by replying to this email.</p>
 </br>
